<resources>
    <string name="app_name">WeShoppie</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create New Account Here</string>
    <string name="login">Login</string>
    <string name="weshoppie">WeShoppie</string>
    <string name="please_select_the_user_type">Please Select The User Type</string>
    <string name="welcome_to">Welcome To</string>
    <string name="continue_as_a_customer">Continue as Customer</string>
    <string name="continue_as_shopkeeper">Continue as Shopkeeper</string>
    <string name="enter_the_name">Enter the Name</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="here_s_your_first_step_with_us">Here\'s your first step with us!</string>
    <string name="fill_out_the_details"> Please Fill Out The Details</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_shop_name">Enter Shop Name</string>
    <string name="enter_shop_type">Enter Shop Type</string>
    <string name="enter_full_address_of_the_shop">Enter Full Address of the shop</string>
    <string name="opening_time">Opening time</string>
    <string name="closing_time">Closing time</string>
    <string name="add_username">Add Username</string>
    <string name="set_password">Set Password :</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="enter_registered_email">Enter Registered Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="click_to_login">Click To Login</string>
    <string name="logout">Logout</string>
    <string name="enter_the_full_address">Enter The Full Address</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="select_the_city">Select The City</string>
    <string name="pincode">Pincode :</string>
    <string name="select_city">Select City :</string>
    <string name="address_line_2">Address Line 2 :</string>
    <string name="address_line_1">Address Line 1 :</string>
    <string name="select_state">Select State :</string>
    <string name="register_your_shop">Register Your Shop</string>
    <string name="register_as_customer">Register As Customer</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="provide_your_account_s_email_for_which_you_sent_to_reset_your_password">Provide your account\'s email for which you sent to reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="go_back">Go back</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state_name">Enter State Name :</string>
    <string name="get_started_with_your_free_account">Get Started With Your Free Account!</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="description_optional">Description (Optional) :</string>
    <string name="enter_more_about_your_shop">Enter more about your shop</string>
    <string name="owner_s_name">Owner\'s Name :</string>
    <string name="shop_name">Shop Name:</string>
    <string name="shop_type">Shop Type:</string>
    <string name="shop_address">Shop Address:</string>
    <string name="add_product">Add Product</string>
    <string name="enter_the_product_name">Enter the product Name</string>
    <string name="enter_product_price_rs">Enter Product Price (Rs.)</string>
    <string name="enter_the_brand_name">Enter the Brand name :</string>
    <string name="product_company_if_any">Product Company (if any) :</string>
    <string name="product_price_per">Product Price per :</string>
</resources>