<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegisterCustomer"
    android:background="@color/background_light_blue"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weshoppie"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@drawable/edit_text_border"
            android:orientation="horizontal">

            <TextView
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:text="@string/here_s_your_first_step_with_us"
                android:textSize="40sp"
                android:layout_margin="15dp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/customer_sign_in"
                android:paddingEnd="15dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fill_out_the_details"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="5sp"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginStart="10sp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/Cust_Name"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/enter_full_name"
            android:gravity="center"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:layout_marginStart="10sp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/Cust_Phone"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/enter_mobile_number"
            android:gravity="center"
            android:inputType="phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_line_1"
            android:layout_marginStart="10sp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/Address_1"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/enter_the_full_address"
            android:gravity="center"
            android:inputType="textMultiLine"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_line_2"
            android:layout_marginStart="10sp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/Address_2"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/enter_the_full_address"
            android:gravity="center"
            android:inputType="textMultiLine"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_city"
                android:layout_marginEnd="40sp"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pincode"
                android:layout_marginStart="50sp"
                android:layout_marginEnd="10sp"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_margin="10sp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/cust_city"
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_border"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="5sp"
                android:hint="@string/enter_city"
                android:gravity="center"
                />

            <EditText
                android:id="@+id/pincode"
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_border"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="5sp"
                android:hint="@string/enter_pincode"
                android:gravity="center"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_state_name"
            android:layout_marginStart="10sp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_margin="10dp"
            android:hint="@string/enter_state_name"
            android:background="@drawable/edit_text_border"
            android:gravity="center" />

        <Button
            android:id="@+id/Cust_Register"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_margin="10sp"
            android:text="@string/register_as_customer"
            android:textSize="22sp"/>

    </LinearLayout>

</ScrollView>