<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    tools:context=".ShopkeeperDashboard.ShopkeeperProfileUpdate">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:text="Profile Info"
        android:textColor="@color/black"
        android:layout_margin="2sp"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20sp"
        android:src="@drawable/my_connected_seller"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner_s_name"
        android:textColor="@color/black"
        android:layout_marginStart="10sp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/Owner_Name_update"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_border"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/enter_full_name"
        android:gravity="center"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textColor="@color/black"
        android:layout_marginStart="10sp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/Owner_Phone_update"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_border"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/enter_mobile_number"
        android:gravity="center"
        android:inputType="phone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_name"
        android:textColor="@color/black"
        android:layout_marginStart="10sp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/Shop_Name_update"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_border"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/enter_shop_name"
        android:gravity="center"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_type"
        android:textColor="@color/black"
        android:layout_marginStart="10sp"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/Shop_Type_update"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="10dp"
        android:spinnerMode="dropdown"
        android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
        android:background="@drawable/edit_text_border"
        android:gravity="center"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_address"
        android:textColor="@color/black"
        android:layout_marginStart="10sp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/Shop_Address_update"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_border"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/enter_full_address_of_the_shop"
        android:gravity="center"
        android:inputType="textMultiLine"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/enter_city"
          android:textColor="@color/black"
          android:layout_marginEnd="40sp"
          android:textSize="20sp"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/pincode"
          android:textColor="@color/black"
          android:layout_marginStart="50sp"
          android:layout_marginEnd="10sp"
          android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:gravity="center"
        android:orientation="horizontal">

      <EditText
          android:id="@+id/shop_city_update"
          android:layout_width="165dp"
          android:layout_height="match_parent"
          android:background="@drawable/edit_text_border"
          android:textColor="@color/black"
          android:textColorHint="@color/black"
          android:layout_marginStart="5sp"
          android:layout_marginEnd="5sp"
          android:hint="@string/enter_city"
          android:gravity="center"
          />

      <EditText
          android:id="@+id/pincode_update"
          android:layout_width="165dp"
          android:layout_height="match_parent"
          android:background="@drawable/edit_text_border"
          android:textColorHint="@color/black"
          android:textColor="@color/black"
          android:layout_marginStart="5sp"
          android:layout_marginEnd="5sp"
          android:hint="@string/enter_pincode"
          android:gravity="center"
          />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_state_name"
        android:textColor="@color/black"
        android:layout_marginStart="10sp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/state_update"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="10dp"
        android:hint="@string/enter_state_name"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_border"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/opening_time"
          android:textColor="@color/black"
          android:layout_marginStart="10sp"
          android:layout_marginEnd="30sp"
          android:textSize="20sp"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/closing_time"
          android:textColor="@color/black"
          android:layout_marginStart="30sp"
          android:layout_marginEnd="10sp"
          android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="10sp"
        android:gravity="center"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/Shop_Open_Time_update"
          android:layout_width="165dp"
          android:layout_height="match_parent"
          android:background="@drawable/edit_text_border"
          android:layout_marginStart="5sp"
          android:layout_marginEnd="10sp"
          android:textColor="@color/black"
          android:textColorHint="@color/black"
          android:hint="@string/opening_time"
          android:gravity="center"
          />

      <TextView
          android:id="@+id/Shop_Close_Time_update"
          android:layout_width="165dp"
          android:layout_height="match_parent"
          android:background="@drawable/edit_text_border"
          android:layout_marginStart="10sp"
          android:layout_marginEnd="5sp"
          android:textColor="@color/black"
          android:textColorHint="@color/black"
          android:hint="@string/closing_time"
          android:gravity="center"
          />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_optional"
        android:textColor="@color/black"
        android:layout_marginStart="10sp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/shop_description_update"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_border"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/enter_more_about_your_shop"
        android:gravity="center"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/Shopkeeper_Register_update"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="20sp"
        android:text="@string/register_your_shop"
        android:textColor="@color/white"
        android:textSize="22sp"/>
  </LinearLayout>

  </ScrollView>