<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350sp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background_light_blue"
    android:paddingLeft="25sp"
    android:paddingRight="25sp"
    android:paddingBottom="12sp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_product"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_margin="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Product Name :"
        android:layout_margin="5sp"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_the_product_name"
        android:padding="10sp"
        android:gravity="center"
        android:background="@drawable/edit_text_border"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Product Price (in Rs.):"
        android:layout_margin="5sp"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_product_price_rs"
        android:padding="10sp"
        android:gravity="center"
        android:background="@drawable/edit_text_border"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_price_per"
        android:layout_margin="5sp"
        android:textSize="17sp"/>

    <Spinner
        android:id="@+id/product_price_per"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:padding="10sp"
        android:gravity="center"
        android:background="@drawable/edit_text_border" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_company_if_any"
        android:layout_margin="5sp"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/product_company"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_the_brand_name"
        android:padding="10sp"
        android:gravity="center"
        android:background="@drawable/edit_text_border"
        android:inputType="text"/>

    <Button
        android:id="@+id/action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        android:layout_marginTop="11sp"
        android:layout_gravity="center"/>

</LinearLayout>